# face_recognition

./: CMakeLists.txt  README.md  facerec.h  funcs.cpp  functions.cpp  header.h  main.cpp
release/: CMakeLists.txt  functions.cpp  header.h  main.cpp
release/database/s10/: 10.pgm
release/database/s27/: 6.pgm
visualisation/: CMakeLists.txt  functions.cpp  header.h  main.cpp  sfml.cpp
visualization/: CMakeLists.txt  functions.cpp  header.h  main.cpp  sfml.cpp
